# serializer version: 1
# name: test_view_example
  dict({
    'exit_code': 0,
    'stderr': '',
    'stdout': '''
      example-e656679f
      ├── environment
      │   └── python3.12
      ├── root
      │   └── requires a
      │       └── satisfied by a-1.0.0
      ├── a
      │   └── a-1.0.0
      │       └── requires b>1.0.0
      │           ├── satisfied by b-2.0.0
      │           └── satisfied by b-3.0.0
      └── b
          ├── b-1.0.0
          ├── b-2.0.0
          └── b-3.0.0
              └── requires c
                  └── unsatisfied: no versions for package
      
  
    ''',
  })
# ---
# name: test_view_example_name
  dict({
    'exit_code': 0,
    'stderr': '',
    'stdout': '''
      example
      
      This is an example scenario, in which the user depends on a single package `a` which requires `b`.
      
      example-e656679f
      ├── environment
      │   └── python3.12
      ├── root
      │   └── requires a
      │       └── satisfied by a-1.0.0
      ├── a
      │   └── a-1.0.0
      │       └── requires b>1.0.0
      │           ├── satisfied by b-2.0.0
      │           └── satisfied by b-3.0.0
      └── b
          ├── b-1.0.0
          ├── b-2.0.0
          └── b-3.0.0
              └── requires c
                  └── unsatisfied: no versions for package
      
  
    ''',
  })
# ---
# name: test_view_example_short_names
  dict({
    'exit_code': 0,
    'stderr': '',
    'stdout': '''
      e656679f
      ├── environment
      │   └── python3.12
      ├── root
      │   └── requires a
      │       └── satisfied by a-1.0.0
      ├── a
      │   └── a-1.0.0
      │       └── requires b>1.0.0
      │           ├── satisfied by b-2.0.0
      │           └── satisfied by b-3.0.0
      └── b
          ├── b-1.0.0
          ├── b-2.0.0
          └── b-3.0.0
              └── requires c
                  └── unsatisfied: no versions for package
      
  
    ''',
  })
# ---
# name: test_view_invalid_target
  dict({
    'exit_code': 1,
    'stderr': '''
      File at '[PWD]/test.json' is not a valid scenario: Input data was truncated.
  
    ''',
    'stdout': '',
  })
# ---
# name: test_view_no_target
  dict({
    'exit_code': 2,
    'stderr': '<not included>',
    'stdout': '<not included>',
  })
# ---
# name: test_view_one_target_does_not_exist
  dict({
    'exit_code': 1,
    'stderr': '''
      File 'foo' not found.
  
    ''',
    'stdout': '',
  })
# ---
# name: test_view_target_does_not_exist
  dict({
    'exit_code': 1,
    'stderr': '''
      File 'foo' not found.
  
    ''',
    'stdout': '',
  })
# ---
